--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URL=mongodb+srv://marcus46:Guvi2023@ecomclust.urs0sbg.mongodb.net/finance
 PORT=5000
-FRONTEND_URL=http://localhost:5173
-CLOUDINARY_CLOUD_NAME=dapu8uxzw
+# FRONTEND_URL=http://localhost:5173
+# CLOUDINARY_CLOUD_NAME=dapu8uxzw
 CLOUDINARY_API_KEY=832311582392449
 CLOUDINARY_API_SECRET=A2AI7hZw_kHhbxNuC1o9lK9nsdo
